Fixed TABLE alignment issues in IE 7

--- a/demo.css
+++ b/demo.css
@@ -3,7 +3,7 @@
 #container {
 	font-family: Tienne, Sans-Serif;
 	margin: 10% auto 0px auto;
-	width: 716px;
+	width: 725px;
 }
 
 /* customize */
@@ -14,6 +14,7 @@ div.poppy_pagination.options {
 	color: #999999;
 	font-size: 14px;
 	height: 19px;
+	padding: 5px 0px 5px 0px;
 	width: 100%;
 }
 
@@ -27,6 +28,7 @@ div.poppy_pagination.options form select {
 
 ul.poppy_pagination.pages li {
 	font-size: 14px;
+	padding: 4px 0px 4px 0px;
 }
 
 ul.poppy_pagination.pages li a {
@@ -34,7 +36,7 @@ ul.poppy_pagination.pages li a {
 }
 
 ul.poppy_pagination.pages li.crumbs {
-	width: 510px;
+	width: 500px;
 }
 
 ul.poppy_pagination.pages li.crumbs a,
@@ -74,4 +76,5 @@ div.poppy_pagination.options {
 
 table.tidy_table {
 	margin: 0px auto 0px auto;
+	width: 100%;
 }
